--- a/Introduccion/about.html
+++ b/Introduccion/about.html
@@ -19,7 +19,7 @@
                             <a href="http://google.com" target="_blank">Google</a>
                             <a href="mailto:tinoch88@gmail.com">contancto</a>
                             <a href="./about">About us</a>
-                            <a href="./about.html#Historia">Historia</a>
+                            <a href="">Historia</a>
                         </h1>
                     </td>
 
@@ -37,7 +37,7 @@
                     </td>
 
                     <td>
-                        <h2>The Facebook</h2>
+                        <h2>About us</h2>
                         <p>Hola asdasdwada</p>
                         <p>dasdawdawd</p>
                         <p>
@@ -62,7 +62,11 @@
                             <li>Lista 2</li>
                         </ol>
                         <div>Division 1</div>
-                        <div>Division 2</div>
+                        <div style="height: 500px;">Division 2</div>
+                        <div id="Historia" style="height: 500px;">
+                            <h1>Historia</h1>
+
+                        </div>
                     </td>
                 </tr>
             </tbody>
