Modelo Caja vs Modelo Texto

--- a/estilos/cajas.html
+++ b/estilos/cajas.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="./cajas.css">
 </head>
 <body>
+    <div id="nuevo">
+        <div>HOLA</div>
+    </div>
+    <span id="span">T</span>
+    <span>TEXTO</span>
+    <h1>H1</h1>
+    <h1>H1</h1>
     <div id="caja1">
-        asd
+        <p>asdasd<p>
         <div class="cajas">
             <p>Texto</p>
             <p>Texto</p>
@@ -18,7 +25,7 @@
             <p>CAJAS</p>
         </div>
     </div>
-    <div id="caja2"></div>
+    <div id="caja2">asd</div>
     <div class="cajas">a</div>
     <div class="cajas">b</div>
     <div class="cajas">c</div>
