--- a/prepractica/index.html
+++ b/prepractica/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prepractica</title>
     <link rel="stylesheet" href="./estilos.css">
@@ -23,5 +22,12 @@
         <div id="aside">Enlaces</div>
     </div>
     <div id="footer2">Todos los derechos reservados</div>
+    <div id="whats">
+        
+       w 
+    </div>
+    <div id="anu">
+        Publicidad
+    </div>
 </body>
 </html>
