--- a/coffee/index.html
+++ b/coffee/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:ital,wght@0,100;0,400;1,100&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./css/mediaquerys.css">
 </head>
 <body>
     <header>
@@ -112,10 +113,12 @@
         </div>
         <div class="col">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1720.3290843146935!2d-107.9131932870353!3d30.41743892178832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86dcadea5ca21383%3A0xb87d8af55c80b694!2sPlaza%20Menonita!5e0!3m2!1ses-419!2smx!4v1612565414717!5m2!1ses-419!2smx" 
-            width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+            width="100%" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
             </iframe>
         </div>
     </section>
+    <br>
+    <br>
     <footer>
         Todos los derechos reservador
     </footer>
